--- a/test/container-structure-test.yml
+++ b/test/container-structure-test.yml
@@ -34,15 +34,15 @@ commandTests:
     args: ["--version"]
     expectedOutput: ["Python 3.12.3"]
 
-  - name: "pip"
-    command: "pip"
+  - name: "pip (system)"
+    command: "/usr/bin/pip3"
     args: ["--version"]
     expectedOutput: ["pip 24.0"]
 
   - name: "aws"
     command: "aws"
     args: ["--version"]
-    expectedOutput: ["aws-cli/2.17.34"]
+    expectedOutput: ["aws-cli/2.17.38"]
 
   - name: "aws-sso"
     command: "aws-sso"
@@ -52,17 +52,22 @@ commandTests:
   - name: "conda"
     command: "conda"
     args: ["--version"]
-    expectedOutput: ["conda 24.5.0"]
+    expectedOutput: ["conda 24.7.1"]
 
   - name: "python (conda)"
     command: "python"
     args: ["--version"]
     expectedOutput: ["Python 3.12.4"]
 
+  - name: "pip (conda)"
+    command: "pip"
+    args: ["--version"]
+    expectedOutput: ["pip 24.2"]
+
   - name: "node"
     command: "node"
     args: ["--version"]
-    expectedOutput: ["v20.16.0"]
+    expectedOutput: ["v20.17.0"]
 
   - name: "corretto"
     command: "java"
@@ -87,7 +92,7 @@ commandTests:
   - name: "kubectl"
     command: "kubectl"
     args: ["version", "--client"]
-    expectedOutput: ["Client Version: v1.29.7"]
+    expectedOutput: ["Client Version: v1.29.8"]
 
   - name: "helm"
     command: "helm"
