--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -15,6 +15,12 @@ jobs:
     permissions:
       contents: read
     steps:
+      - name: Clean Actions Runner
+        id: clean_actions_runner
+        uses: ministryofjustice/github-actions/clean-actions-runner@ccf9e3a4a828df1ec741f6c8e6ed9d0acaef3490 # v18.5.0
+        with:
+          confirm: true
+
       - name: Checkout
         id: checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
