:art: Renovate: ignore GitHub Actions _ devcontainer

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,6 +15,10 @@
     {
       "matchManagers": ["custom.regex"],
       "enabled": true
+    },
+    {
+      "matchDepTypes": ["github-actions", "devcontainer"],
+      "enabled": false
     }
   ]
 }
