--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,7 +7,7 @@
       "matchStrings": [
         "#\\s*renovate:\\s*?(release=(?<release>.*?))?\\s*depName=(?<depName>.*?)?\\sENV .*?_VERSION=\"(?<currentValue>.*)\""
       ],
-      "registryUrlTemplate": "https://public.ecr.aws/ubuntu/ubuntu?{{#if release }}release={{release}}{{else}}suite=stable{{/if}}&components=main,universe&binaryArch=amd64",
+      "registryUrlTemplate": "https://archive.ubuntu.com/ubuntu?{{#if release }}release={{release}}{{else}}suite=stable{{/if}}&components=main,universe&binaryArch=amd64",
       "datasourceTemplate": "deb"
     }
   ],
@@ -15,6 +15,10 @@
     {
       "matchManagers": ["custom.regex"],
       "enabled": true
+    },
+    {
+      "matchDepTypes": ["github-actions", "devcontainer", "dockerfile"],
+      "enabled": false
     }
   ]
 }
