--- a/test/container-structure-test.yml
+++ b/test/container-structure-test.yml
@@ -52,17 +52,17 @@ commandTests:
   - name: "conda"
     command: "conda"
     args: ["--version"]
-    expectedOutput: ["conda 25.1.1-2"]
+    expectedOutput: ["conda 25.1.1"]
 
   - name: "python (conda)"
     command: "python"
     args: ["--version"]
-    expectedOutput: ["Python 3.12.8"]
+    expectedOutput: ["Python 3.12.9"]
 
   - name: "pip (conda)"
     command: "pip"
     args: ["--version"]
-    expectedOutput: ["pip 24.2"]
+    expectedOutput: ["pip 25.0"]
 
   - name: "node"
     command: "node"
@@ -102,7 +102,7 @@ commandTests:
   - name: "cloud-platform"
     command: "cloud-platform"
     args: ["--skip-version-check", "version"]
-    expectedOutput: ["1.40.0"]
+    expectedOutput: ["1.40.1"]
 
   - name: "vim"
     command: "vim"
