--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -43,4 +43,5 @@ jobs:
         with:
           image-ref: ghcr.io/${{ github.repository }}:${{ github.sha }}
           severity: HIGH,CRITICAL
+          ignore-unfixed: true
           exit-code: 1
