--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -48,10 +48,13 @@ jobs:
           ignore-unfixed: true
           exit-code: 1
 
-      - name: DEBUG
+      - name: Slack CVE Alert
         # if: github.event_name == 'schedule'
         if: failure() && steps.scan.outcome == 'failure'
-        id: debug
-        run: |
-          echo "OUTCOME: ${{ steps.scan.outcome }}"
-          echo "EXIT CODE: ${{ steps.scan.outputs.exit-code }}"
+        id: slack_cve_alert
+        uses: slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d # v2.0.0
+        with:
+          webhook-type: incoming-webhook
+          webhook: ${{ secrets.CVE_SCAN_SLACK_WEBHOOK_URL }}
+          payload: |
+            {"repository": "${{ github.repository }}"}
