--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -57,4 +57,8 @@ jobs:
           webhook-type: incoming-webhook
           webhook: ${{ secrets.CVE_SCAN_SLACK_WEBHOOK_URL }}
           payload: |
-            {"repository": "${{ github.repository }}"}
+            {
+              "repository": "${{ github.repository }}",
+              "run_id": "${{ github.run_id }}",
+              "job": "${{ github.job }}"
+            }
