--- a/.github/workflows/scheduled-scan.yml
+++ b/.github/workflows/scheduled-scan.yml
@@ -19,6 +19,12 @@ jobs:
     permissions:
       contents: read
     steps:
+      - name: Clean Actions Runner
+        id: clean_actions_runner
+        uses: ministryofjustice/github-actions/clean-actions-runner@db1a54895bf5fb975c60af47e5a3aab96505ca3e # v18.6.0
+        with:
+          confirm: true
+
       - name: Get Latest Release Tag
         id: get_latest_release
         shell: bash
@@ -30,11 +36,24 @@ jobs:
 
           echo "latest-release-tag=$latestReleaseTag" >>"${GITHUB_ENV}"
 
-      - name: Clean Actions Runner
-        id: clean_actions_runner
-        uses: ministryofjustice/github-actions/clean-actions-runner@db1a54895bf5fb975c60af47e5a3aab96505ca3e # v18.6.0
-        with:
-          confirm: true
+      - name: Download .trivyignore
+        id: download_trivyignore
+        shell: bash
+        run: |
+          downloadTrivyignore=$(gh api "repos/${{ github.repository }}/contents/.trivyignore?ref=${{ env.latest-release-tag }}" 2>/dev/null || true)
+          export downloadTrivyignore
+
+          downloadTrivyignoreStatus=$(jq -r '.status' <<< "${downloadTrivyignore}")
+          export downloadTrivyignoreStatus
+
+          if [[ "${downloadTrivyignoreStatus}" == "null" ]]; then
+            jq -r '.content' <<< "${downloadTrivyignore}" | base64 --decode > .trivyignore
+          elif [[ "${downloadTrivyignoreStatus}" == "404" ]]; then
+            echo ".trivyignore not found" # It's OK if we don't find one, it means the user might not have created one yet
+          else
+            echo "Error downloading .trivyignore"
+            exit 1
+          fi
 
       - name: Scan
         id: scan
