--- a/.github/workflows/scheduled-scan.yml
+++ b/.github/workflows/scheduled-scan.yml
@@ -49,6 +49,7 @@ jobs:
           export downloadTrivyignoreStatus
 
           if [[ "${downloadTrivyignoreStatus}" == "null" ]]; then
+            echo ".trivyignore found, writing to file"
             jq -r '.content' <<< "${downloadTrivyignore}" | base64 --decode > .trivyignore
           elif [[ "${downloadTrivyignoreStatus}" == "404" ]]; then
             echo ".trivyignore not found" # It's OK if we don't find one, it means the user might not have created one yet
