--- a/.trivyignore
+++ b/.trivyignore
@@ -20,3 +20,6 @@ CVE-2024-45338
 
 ## CVE-2025-22869 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform)
 CVE-2025-22869
+
+## CVE-2025-22874 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/helm, usr/bin/kubectl)
+CVE-2025-22874
