--- a/.trivyignore
+++ b/.trivyignore
@@ -24,3 +24,8 @@ CVE-2025-22869
 ## CVE-2025-22874 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/helm, usr/bin/kubectl)
 CVE-2025-22874
 
+## CVE-2025-22868 (usr/local/bin/cloud-platform, usr/local/bin/kubectl)
+CVE-2025-22868
+
+## CVE-2022-40898 (Python (python-pkg))
+CVE-2022-40898
