--- a/.trivyignore
+++ b/.trivyignore
@@ -32,3 +32,7 @@ CVE-2022-40898
 
 ## CVE-2025-47907 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
 CVE-2025-47907
+
+## Trivy: misreading due to heredoc structure
+AVD-DS-0017
+AVD-DS-0029
