--- a/.trivyignore
+++ b/.trivyignore
@@ -32,3 +32,6 @@ CVE-2022-40898
 
 ## CVE-2025-47907 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
 CVE-2025-47907
+
+## CVE-2025-47906 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/git-lfs, usr/local/bin/kubectl)
+CVE-2025-47906
