--- a/.trivyignore
+++ b/.trivyignore
@@ -34,28 +34,31 @@ CVE-2022-40898
 CVE-2025-47907
 
 ## CVE-2025-47912 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-47912
+CVE-2025-47912 exp:2025-12-01
 
 ## CVE-2025-58183 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-58183
-
-## CVE-2025-58185 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-58185
+CVE-2025-58183 exp:2025-12-01
 
 ## CVE-2025-58186 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-58186
+CVE-2025-58186 exp:2025-12-01
 
 ## CVE-2025-58187 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-58187
+CVE-2025-58187 exp:2025-12-01
 
 ## CVE-2025-58188 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-58188
+CVE-2025-58188 exp:2025-12-01
+
+## CVE-2025-58189 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
+CVE-2025-58189 exp:2025-12-01
 
 ## CVE-2025-61723 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-61723
+CVE-2025-61723 exp:2025-12-01
 
 ## CVE-2025-61724 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-61724
+CVE-2025-61724 exp:2025-12-01
+
+## CVE-2024-25621 (usr/local/bin/helm)
+CVE-2024-25621 exp:2025-12-01
 
 ## Trivy: misreading due to heredoc structure
 AVD-DS-0017
@@ -69,4 +72,3 @@ AVD-DS-0026
 
 ## CVE-2025-47906 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/git-lfs, usr/local/bin/kubectl)
 CVE-2025-47906
-
