Disable natural language linting

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -16,3 +16,8 @@ jobs:
       packages: read
       statuses: write
     uses: ministryofjustice/analytical-platform-github-actions/.github/workflows/reusable-super-linter.yml@72a6b41dd6f2ccce15aa70b0e42178f6f5583018 # v5.3.0
+    with:
+      super-linter-variables: |
+        {
+          "VALIDATE_NATURAL_LANGUAGE": "false"
+        }
