--- a/.trivyignore
+++ b/.trivyignore
@@ -60,6 +60,9 @@ CVE-2025-61724 exp:2025-12-01
 ## CVE-2024-25621 (usr/local/bin/helm)
 CVE-2024-25621 exp:2025-12-01
 
+## CVE-2025-63811 (usr/local/bin/aws-sso)
+CVE-2025-63811 exp:2026-17-01
+
 ## Trivy: misreading due to heredoc structure
 AVD-DS-0017
 AVD-DS-0029
