--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,10 @@ updates:
     commit-message:
       prefix: ":dependabot: github-actions"
       include: "scope"
+    groups:
+      analytical-platform-github-actions:
+        patterns:
+          - "ministryofjustice/analytical-platform-github-actions*"
   - package-ecosystem: "devcontainers"
     directory: "/"
     schedule:
