--- a/.trivyignore
+++ b/.trivyignore
@@ -96,6 +96,9 @@ CVE-2025-61729
 CVE-2025-66418 exp:2026-01-07
 CVE-2025-66471 exp:2026-01-07
 
+## CVE-2026-21441 - (Miniconda urllib3 - transitive dependency in conda)
+CVE-2026-21441
+
 # linux-libc-dev (kernel headers)
 # These CVEs are in the Linux kernel, not the container. linux-libc-dev only provides
 # header files for compilation - the actual kernel runs on the Kubernetes node host.
