--- a/.trivyignore
+++ b/.trivyignore
@@ -12,32 +12,32 @@
 # ## CVE-2024-41110 (usr/local/bin/aws-sso)
 # CVE-2024-41110
 
-# ## CVE-2024-45337 (usr/local/bin/aws-sso, usr/local/bin/cloud-platform)
-# CVE-2024-45337
+## CVE-2024-45337 (usr/local/bin/aws-sso, usr/local/bin/cloud-platform)
+CVE-2024-45337
 
 # ## CVE-2024-45338 (usr/bin/ollama, usr/local/bin/cloud-platform, usr/local/bin/kubectl)
 # CVE-2024-45338
 
-# ## CVE-2025-22869 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform)
-# CVE-2025-22869
+## CVE-2025-22869 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform)
+CVE-2025-22869
 
-# ## CVE-2025-22874 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/helm, usr/bin/kubectl)
-# CVE-2025-22874
+## CVE-2025-22874 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/helm, usr/bin/kubectl)
+CVE-2025-22874
 
-# ## CVE-2025-22868 (usr/local/bin/cloud-platform, usr/local/bin/kubectl)
-# CVE-2025-22868
+## CVE-2025-22868 (usr/local/bin/cloud-platform, usr/local/bin/kubectl)
+CVE-2025-22868
 
 # ## CVE-2022-40898 (Python (python-pkg))
 # CVE-2022-40898
 
-# ## CVE-2025-47907 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-# CVE-2025-47907
+## CVE-2025-47907 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
+CVE-2025-47907
 
 # ## CVE-2025-47912 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
 # CVE-2025-47912 exp:2025-12-01
 
-# ## CVE-2025-58183 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-# CVE-2025-58183 exp:2025-12-01
+## CVE-2025-58183 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
+CVE-2025-58183 exp:2026-02-09
 
 # ## CVE-2025-58186 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
 # CVE-2025-58186 exp:2025-12-01
@@ -88,8 +88,8 @@
 # ## CVE-2025-58187 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform)
 # CVE-2025-58187
 
-# ## CVE-2025-61729 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-# CVE-2025-61729
+## CVE-2025-61729 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
+CVE-2025-61729
 
 # # Python
 # ## CVE-2025-66418, CVE-2025-66471 (Miniconda urllib3 - transitive dependency in conda)
@@ -100,8 +100,8 @@
 GHSA-58pv-8j8x-9vj2 exp:2026-01-28
 CVE-2026-23949 exp:2026-02-05
 
-# ## CVE-2026-21441 - (Miniconda urllib3 - transitive dependency in conda)
-# CVE-2026-21441
+## CVE-2026-21441 - (Miniconda urllib3 - transitive dependency in conda)
+CVE-2026-21441
 
 # # linux-libc-dev (kernel headers)
 # # These CVEs are in the Linux kernel, not the container. linux-libc-dev only provides
@@ -111,8 +111,8 @@ CVE-2026-23949 exp:2026-02-05
 # ## CVE-2025-38666: AppleTalk AARP proxy use-after-free - obsolete protocol, requires kernel module loading (blocked in containers)
 # CVE-2025-38666
 
-# ## CVE-2025-63811 - (usr/local/bin/aws-sso)
-# CVE-2025-63811
+## CVE-2025-63811 - (usr/local/bin/aws-sso)
+CVE-2025-63811
 
 ## CVE-2026-24049 (Python (python-pkg) - wheel (METADATA))
 CVE-2026-24049 exp:2026-02-06
