--- a/.trivyignore
+++ b/.trivyignore
@@ -1,46 +1,43 @@
 ## CVE-2024-45337 (usr/local/bin/aws-sso, usr/local/bin/cloud-platform)
-CVE-2024-45337
-
-# ## CVE-2024-45338 (usr/bin/ollama, usr/local/bin/cloud-platform, usr/local/bin/kubectl)
-# CVE-2024-45338
+CVE-2024-45337 exp:2026-04-27
 
 ## CVE-2025-22869 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform)
-CVE-2025-22869
+CVE-2025-22869 exp:2026-04-27
 
 ## CVE-2025-22874 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/helm, usr/bin/kubectl)
-CVE-2025-22874
+CVE-2025-22874 exp:2026-04-27
 
 ## CVE-2025-22868 (usr/local/bin/cloud-platform, usr/local/bin/kubectl)
-CVE-2025-22868
+CVE-2025-22868 exp:2026-04-27
 
 ## CVE-2025-47907 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-47907
+CVE-2025-47907 exp:2026-04-27
 
 ## CVE-2025-58183 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
 CVE-2025-58183 exp:2026-02-09
 
 ## CVE-2025-61729 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
-CVE-2025-61729
+CVE-2025-61729 exp:2026-04-27
 
 ## Trivy: misreading due to heredoc structure
-AVD-DS-0017
-AVD-DS-0029
+AVD-DS-0017 exp:2026-04-27
+AVD-DS-0029 exp:2026-04-27
 
 # AWS_SSO_FILE_PASSWORD false alert
-AVD-DS-0031
+AVD-DS-0031 exp:2026-04-27
 
 # HEALTHCHECK handled downstream
-AVD-DS-0026
+AVD-DS-0026 exp:2026-04-27
 
 # Python (python-pkg - jaraco.context (METADATA ))
 GHSA-58pv-8j8x-9vj2 exp:2026-01-28
 CVE-2026-23949 exp:2026-02-05
 
 ## CVE-2026-21441 - (Miniconda urllib3 - transitive dependency in conda)
-CVE-2026-21441
+CVE-2026-21441 exp:2026-04-27
 
 ## CVE-2025-63811 - (usr/local/bin/aws-sso)
-CVE-2025-63811
+CVE-2025-63811 exp:2026-04-27
 
 ## CVE-2026-24049 (Python (python-pkg) - wheel (METADATA))
 CVE-2026-24049 exp:2026-02-06
