--- a/.trivyignore
+++ b/.trivyignore
@@ -41,3 +41,7 @@ CVE-2025-63811 exp:2026-04-27
 
 ## CVE-2026-24049 (Python (python-pkg) - wheel (METADATA))
 CVE-2026-24049 exp:2026-02-06
+
+## CVE-2025-61726 + CVE-2025-61728 (stdlib - usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/git-lfs, usr/local/bin/kubectl)
+CVE-2025-61726 exp:2026-02-14
+CVE-2025-61728 exp:2026-02-14
