feat: update Dockerfile to include GitHub CLI and Copilot CLI, and bump docker-in-docker version
Signed-off-by: Jacob Woffenden <jacob.woffenden@justice.gov.uk>

--- a/test/container-structure-test.yml
+++ b/test/container-structure-test.yml
@@ -134,6 +134,16 @@ commandTests:
     args: ["--version"]
     expectedOutput: ["git-lfs/3.7.1"]
 
+  - name: "gh"
+    command: "gh"
+    args: ["--version"]
+    expectedOutput: ["gh version 2.87.0"]
+
+  - name: "copilot"
+    command: "copilot"
+    args: ["--version"]
+    expectedOutput: ["GitHub Copilot CLI 0.0.412"]
+
 fileExistenceTests:
   - name: "/opt/analytical-platform"
     path: "/opt/analytical-platform"
